day2/data.tf
data "aws-vpc" "exisiting_vpc" {
    exists = true
    resource "aws_security_group" "sg" {
        name = "my-security-group"
        description = "My security group"
        vpc_id = data.aws_vpc.existing_vpc.id
        ingress {
            from_port   = 22
            to_port     = 22
            protocol    = "tcp"
            cidr_blocks = ["0.0.0.0/0"]
            } 
    }      
          egress {
            from_port   = 0
            to_port     = 0
            protocol    = "-1"
            cidr_blocks = ["0.0.0.0/0"] 
            }        
   tags = {
        Name = "MySecurityGroup"
    }
}
